# web0x0a

./: README.md
task_0/: index.html
task_1/: app.py
task_2/: index.php
task_3/: Dockerfile  bot.js  db.js  docker-compose.yml  flag.txt  mongo-init.js  package.json  server.js
task_3/middlewares/: m_auth.js  m_errorHandler.js  voting.js
task_3/model/: User.js  Volunteer.js
task_3/routes/: r_admin.js  r_user.js
task_3/static/css/: style.css
task_3/static/js/: function.js  plugins.js
task_3/static/sass/: style.scss
task_3/static/sass/sub-stylesheet/: _banner.scss  _button.scss  _cart-page.scss  _global.scss  _header.scss  _main.scss  _mixins.scss  _navs.scss  _normalize.scss  _sidebar.scss  _variables.scss
task_3/views/: aboutus.ejs  addentry.ejs  admin.ejs  contactus.ejs  error404.ejs  home.ejs  login.ejs  register.ejs  volunteerDetails.ejs  volunteers.ejs
task_4/public/: docker-compose.yml
task_4/public/challenge/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
task_4/public/challenge/migrations/2022-12-04-131211_another_schema/: down.sql  up.sql
task_4/public/challenge/scripts/: script1.sh  script2.sh  script3.sh
task_4/public/challenge/src/: config.rs  main.rs  schema.rs  utils.rs
task_4/public/challenge/src/handlers/: api.rs  artists.rs  auth.rs  common.rs  converter.rs  mod.rs  songs.rs  static_files.rs
task_4/public/challenge/src/middlewares/: auth.rs
task_4/public/challenge/src/repositories/: artists.rs  common.rs  mod.rs  songs.rs  users.rs
