[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["multipart"] }
base64 = "0.13.1"
diesel = { version = "2.0.2", features = ["postgres"] }
dotenvy = "0.15.6"
md5 = "0.7.0"
pwhash = "1.0.0"
serde = { version = "1.0.147", features = ["derive", "serde_derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["full"] }
tower-cookies = "0.8.0"
tower-http = { version = "0.3.4", features = ["trace", "cors", "fs"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
sanitize-filename = "0.4.0"


[print_schema]
file = "src/db/schema.rs"
